sumo/tests/netconvert/errors/xml_false_edg/errors.netconvert.exe
Error: File 'D:\projects\TrafficTower\sumo\tests\netconvert\errors\xml_false_edg\hokkaido2.edg.xml' does not exist.
Error: No edges loaded.
Quitting (conversion failed).
